--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,7 @@ body {
 
 #logo {
     width: 10%;
-    -webkit-transition: -webkit-transform .8s ease-in-out;
-    -ms-transition: -ms-transform .8s ease-in-out;
-    transition: transform .8s ease-in-out;
+    margin: 5px 5px 5px 5px;
 }
 
 .infos-menu {
@@ -31,6 +29,14 @@ body {
 
 .la-eye {
     margin: 0 10px 0 0;
+}
+
+.search {
+    position: relative;
+    margin: 10px 0 0 0;
+    float: left;
+    top: 50px;
+    right: 50px;
 }
 
 .field {
@@ -90,9 +96,22 @@ p {
     color: white;
 }
 
+h1 {
+    font-size: 1.5em;
+    text-align: center;
+    padding: 10px 0 0 0;
+}
+
 .main {
-    width: 60%;
+    width: 80%;
     margin: 20px auto;
+    display: flex;
+    justify-content: center;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
 }
 
 .hot {
@@ -115,6 +134,11 @@ p {
     flex-direction: column;
 }
 
+.card p {
+    text-align: center;
+    margin: 7px 0 0 0;
+}
+
 .stats {
     display: flex;
     margin: 10px 0 10px 0;
@@ -131,6 +155,19 @@ p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.rating {
-    margin-left: 15px;
+.cover {
+    width: 290px;
+    height: 450px;
+    display: flex;
+    align-self: center;
 }
+
+.main-cover {
+    position: relative;
+    float: right;
+    top: 50px;
+    left: 100px;
+}
+
+
+/*  Détails page */
