--- a/chromatique/public/assets/css/style.css
+++ b/chromatique/public/assets/css/style.css
@@ -99,10 +99,14 @@ p {
     color: white;
 }
 
-h1 {
+.title {
     font-size: 1.5em;
-    text-align: center;
-    padding: 10px 0 0 0;
+    padding: 10px 10px 10px 0;
+    border-bottom: solid #DCDDDE 1px;
+}
+
+.synopsis {
+    text-align: left !important;
 }
 
 .main {
@@ -138,6 +142,7 @@ h1 {
     padding: 10px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .card p {
@@ -166,13 +171,35 @@ h1 {
     height: 450px;
     display: flex;
     align-self: center;
+    transition: 0.5s;
 }
 
-.main-cover {
+.cover:hover {
+    transform: scale(1.5);
+}
+
+
+/* .main-cover {
     position: relative;
     float: right;
     top: 50px;
     left: 100px;
+} */
+
+.main-text {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+    width: 100%;
+    height: 50%;
+    background-image: linear-gradient( to bottom, transparent, rgba(0, 0, 0, 0.84) 85%, #000);
+    padding: 64px 15px 0 15px;
+    border-radius: 3px;
+}
+
+.main-text--bottom {
+    height: 30%;
 }
 
 
@@ -214,4 +241,50 @@ h1 {
 .zoom-in,
 .zoom-out {
     cursor: pointer;
+}
+
+
+/* Suppression des messages flash */
+
+.flash-fade {
+    opacity: 0;
+    transition: opacity 5s;
+}
+
+
+/* Présentations des tomes */
+
+.banner {
+    opacity: 0.8;
+    display: flex;
+    justify-content: center;
+    background-image: linear-gradient(to bottom, rgba(253, 250, 250, 0.199), rgba(8, 8, 8, 10.5)), url(../mangas/One_Piece/one_piece_banner.jpg);
+    background-color: #DCDDDE;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+}
+
+.details {
+    display: flex;
+    justify-content: center;
+}
+
+.details-main-cover {
+    width: 250px;
+    height: 350px;
+    display: flex;
+    align-self: center;
+}
+
+.details-manga-cover {
+    border: 3px solid white;
+    border-radius: 3px;
+    position: relative;
+    bottom: 60px;
+}
+
+.details-infos {
+    width: 40%;
 }
