--- a/chromatique/public/assets/css/style.css
+++ b/chromatique/public/assets/css/style.css
@@ -2341,219 +2341,6 @@ ol {
 	}
 }
 
-/* Css Pour le zoom  */
-
-body {
-    margin: 0;
-    background-color: #36393F;
-}
-
-.logo {
-    margin: 5px 5px 5px 5px;
-    width: 10%;
-}
-
-.logo__left {
-    width: 50px
-}
-
-.infos-menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #1e1f22;
-    position: sticky;
-}
-
-.infos-menu i {
-    margin-left: 2px;
-}
-
-.wrapper-menu {
-    display: flex;
-    align-items: center;
-}
-
-.la-user-shield {
-    margin: 0 10px 0 0;
-}
-
-.search {
-    position: relative;
-    margin: 10px 0 0 0;
-    float: left;
-    top: 50px;
-    right: 50px;
-}
-
-.field {
-    border: 0 !important;
-    width: 100% !important;
-    height: 100% !important;
-    padding: 10px 20px !important;
-    background: white !important;
-    border-radius: 3px !important;
-    box-shadow: 0px 8px 15px rgba(75, 72, 72, 0.1) !important;
-    -webkit-transition: all 0.4s ease !important;
-    transition: all 0.4s ease !important;
-}
-
-.login {
-    display: flex;
-    align-items: center;
-    margin: 0 20px 0 0px;
-}
-
-.login a {
-    margin: 0 5px 0 5px;
-    text-decoration: none;
-    font-size: 1.5em;
-    color: #fff;
-    padding: 5px 5px 5px 5px;
-}
-
-.dropdown-login {
-    position: relative;
-    display: inline-block;
-    margin: 0 0 0 50px;
-}
-
-.dropdown-login:hover .dropdown-content {
-    display: flex;
-    flex-direction: column;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #1e1f22;
-    min-width: 260px;
-    top: 85%;
-    right: 5%;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 30px 8px 16px 8px;
-    z-index: 1;
-}
-
-.white {
-    color: #ffff;
-    text-decoration: none;
-}
-
-p {
-    color: white;
-}
-
-.title {
-    font-size: 1.5em;
-    padding: 10px 10px 10px 0;
-    border-bottom: solid #DCDDDE 1px;
-}
-
-.synopsis {
-    text-align: left !important;
-}
-
-.main {
-    width: 80%;
-    margin: 20px auto;
-    display: flex;
-    justify-content: center;
-}
-
-.content {
-    display: flex;
-    flex-direction: column;
-}
-
-.hot {
-    border-bottom: solid #DCDDDE 1px;
-    color: #DCDDDE;
-    font-size: 1.8em;
-    padding: 0 0 5px 0;
-}
-
-.cards {
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    flex-wrap: wrap;
-    width: 60%;
-}
-
-.card {
-    background-color: #1e1f22;
-    margin: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-}
-
-.card p {
-    text-align: center;
-    margin: 7px 0 0 0;
-}
-
-.stats {
-    display: flex;
-    margin: 10px 0 10px 0;
-}
-
-.views {
-    display: flex;
-}
-
-.resume {
-    width: 75%;
-    margin: 5px 0 0 0;
-    font-size: 1.2em;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.cover {
-    width: 290px;
-    height: 450px;
-    display: flex;
-    align-self: center;
-    transition: 0.5s;
-}
-
-.cover:hover {
-    transform: scale(1.5);
-}
-
-
-/* .main-cover {
-    position: relative;
-    float: right;
-    top: 50px;
-    left: 100px;
-} */
-
-.main-text {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 1;
-    width: 100%;
-    height: 55%;
-    background-image: linear-gradient( to bottom, transparent, rgba(0, 0, 0, 0.84) 85%, #000);
-    padding: 64px 15px 0 15px;
-    border-radius: 3px;
-}
-
-.main-text--bottom {
-    height: 30%;
-}
-
-
-/*  Détails page admin */
-
-.manga-thumb {
-    width: 20%;
-}
-
 
 /*  Zoom des pages */
 
@@ -2561,7 +2348,7 @@ p {
     margin: 1%;
     padding: 0.3em;
     width: 6%;
-    background-color: #1e1f226e;
+    background-color: #343a40;
     border-radius: 20px;
     position: absolute;
     float: left;
@@ -2588,6 +2375,10 @@ p {
     cursor: pointer;
 }
 
+.white {
+	color: white;
+}
+
 
 /* Suppression des messages flash */
 
@@ -2597,39 +2388,3 @@ p {
 }
 
 
-/* Présentations des tomes */
-
-.banner {
-    opacity: 0.8;
-    display: flex;
-    justify-content: center;    
-    background-color: #DCDDDE;
-}
-
-.banner img {
-    width: 100%;
-}
-
-.details {
-    display: flex;
-    justify-content: center;
-}
-
-.details-main-cover {
-    width: 250px;
-    height: 350px;
-    display: flex;
-    align-self: center;
-}
-
-.details-manga-cover {
-    border: 3px solid white;
-    border-radius: 3px;
-    position: relative;
-    bottom: 60px;
-    width: 240px
-}
-
-.details-infos {
-    width: 40%;
-}
